# goma

./: .buildinfo  .clang-format  .gitignore  CHANGES.md  CMakeLists.txt  README.md  TAGS  background.html  boundary_conditions.cu  boundary_conditions.cuh  code_structure_and_io.html  documentation_lists.html  exo_read_mesh.c  exo_read_mesh.h  genindex.html  gentags.sh  goma-split.config  goma-split.files  goma-split.includes  index.html  introduction.html  library_mode.html  material_files.html  ns_constants.h  ns_cuda.cu  ns_macros.h  ns_structs.h  objects.inv  problem_description_file.html  references.html  search.html  searchindex.js  solve_nonlinear.cu  solve_nonlinear.cuh  solve_problem.cu  solve_problem.h  trilinos_solve.cpp
docs/: problem_description_file.rst
include/: ac_conti.h  ac_hunt.h  ac_particles.h  ac_stability.h  ac_stability_util.h  ac_update_parameter.h  ad_momentum.h  ad_turbulence.h  base_mesh.h  bc_colloc.h  bc_contact.h  bc_curve.h  bc_dirich.h  bc_integ.h  bc_special.h  bc_surfacedomain.h  compute_lagged_variables.h  cuda_constants.cuh  cuda_interface.h  cuda_macros.h  cuda_solve_nonlinear.cuh  cuda_structs.cuh  decomp_interface.h  dp_comm.h  dp_ghost.h  dp_map_comm_vec.h  dp_types.h  dp_utils.h  dp_vif.h  dpi.h  el_elm.h  el_elm_info.h  el_geom.h  el_quality.h  exo_conn.h  exo_read_mesh.h  exo_struct.h  loca_const.h  loca_util_const.h  md_timer.h  (+123 more)
material_file/: electrical.html  mechanical_and_constitutive.html  microstructure.html  moments.html  physical_properties.html  shell_equation.html  source_terms.html  species.html  thermal_properties.html
(+901 files in other folders)
